correcion de mapas

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -104,7 +104,7 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="uno" styleClass=""/>
+                                <h:message for="uno" styleClass="mensaje-alerta-11"/>
                             </div>
                             <div class="area-texto">
                                 <h:inputTextarea styleClass=""
