--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -91,7 +91,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="unod" styleClass=""/>
+                                    <h:message for="unod" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <h:inputText id="seisd"
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
@@ -99,7 +99,7 @@
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
                                     <f:validateRequired/>
                                 </h:inputText>
-                                <h:message for="seisd" styleClass=""/>
+                                <h:message for="seisd" styleClass="mensaje-alerta-12"/>
                             </div>
                             <div class="cuadro-hijo2">
                                 <div class="img-hijo2">
@@ -109,16 +109,16 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
+                                    <h:message for="dosd" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div>
-                                    <h:message for="dosd" styleClass=""/>
                                     <h:inputText id="sieted"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="sieted" styleClass=""/>
+                                    <h:message for="sieted" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div class="img-hijo2">
                                     <h:inputText id="tresd"
@@ -127,7 +127,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="tresd" styleClass=""/>
+                                    <h:message for="tresd" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div>
                                     <h:inputText id="ochod"
@@ -136,7 +136,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="ochod" styleClass=""/>
+                                    <h:message for="ochod" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div class="img-hijo2">
                                     <h:inputText id="cuatrod"
@@ -145,7 +145,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="cuatrod" styleClass=""/>
+                                    <h:message for="cuatrod" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div>
                                     <h:inputText id="nueved"
@@ -154,7 +154,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="nueved" styleClass=""/>
+                                    <h:message for="nueved" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div class="img-hijo2">
                                     <h:inputText id="cincod"
@@ -163,7 +163,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="cincod" styleClass=""/>
+                                    <h:message for="cincod" styleClass="mensaje-alerta-12"/>
                                 </div>
                                 <div>
                                     <h:inputText id="diezd"
@@ -172,7 +172,7 @@
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="diezd" styleClass=""/>
+                                    <h:message for="diezd" styleClass="mensaje-alerta-12"/>
                                 </div>
                             </div>
                             <h:commandButton id="boton-enviar-mapa-mental-movil"
