--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -122,8 +122,10 @@
                 </h:panelGroup>
             </div>
         </div>
+        <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #modal-pregunta-detonadora">Open</button>
+
         <h:panelGroup id="modal-pregunta-detonadora" layout="block" styleClass="uk-flex-top fondo-pregunta-detonadora" pt:uk-modal="">
-            <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+            <div class="uk-modal-dialog pop-art-modal uk-modal-body uk-margin-auto-vertical">
                 <button class="uk-modal-close-default" type="button" uk-close=""/>
                 <h:outputText id="pregunta-detonadora" value="#{actividadAlumno2Controlador.preguntaDetonadora}"/>
             </div>
