--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -90,6 +90,7 @@
 
                         <div class="uk-position-absolute texto-posicion">
                             <h3 class="uk-text-center">#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}</h3>
+                            <h:message for="introduction" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea uk-margin-large-bottom"
                                          id="introduction"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
@@ -97,8 +98,9 @@
                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="introduction" styleClass=""/>
+
                             <h3 class="uk-text-center margen-small">#{alumno['map8.title.supporting']}</h3>
+                            <h:message for="deails1" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
                                              id="deails1"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
@@ -106,7 +108,7 @@
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="deails1" styleClass=""/>
+                            <h:message for="deails2" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
                                              id="deails2"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
@@ -114,7 +116,7 @@
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="deails2" styleClass=""/>
+                            <h:message for="deails3" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea"
                                              id="deails3"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
@@ -122,8 +124,9 @@
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-                            <h:message for="deails3" styleClass=""/>
+
                             <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}:</h3>
+                            <h:message for="Conclusion" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea"
                                              id="Conclusion"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
@@ -144,6 +147,15 @@
                                      styleClass="boton-enviar boton-gral8"/>
                 </h:form>
 
+
+                            <h:commandButton id="boton-enviar-mapa-mental-escritorio"
+                                             value="enviar"
+                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             action="#{mapaMentalControlador.respondeMapaMental}"
+                                             styleClass="boton-enviar"/>
+                        </div>
+                    </h:form>
+                </div>
                 <div class="imagen-who-small uk-hidden@s">
                     <h:graphicImage library="img" name="mounstro/who.svg"/>
                 </div>
