--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -87,74 +87,59 @@
                     <div class="imagen-hamburguesa  ">
                         <h:graphicImage library="img" name="/alumno/hamburguesa.svg"/>
                     </div>
-
                         <div class="uk-position-absolute texto-posicion">
-                            <h3 class="uk-text-center">#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}</h3>
+                            <h3 class="uk-text-center">#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}</h3>
                             <h:message for="introduction" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea uk-margin-large-bottom"
                                          id="introduction"
-                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
-
-                            <h3 class="uk-text-center margen-small">#{alumno['map8.title.supporting']}</h3>
+                            <h3 class="uk-text-center margen-small uk-text-capitalize">#{alumno['map8.title.supporting']}:</h3>
                             <h:message for="deails1" styleClass=""/>
                             <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
                                              id="deails1"
-                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
-                                <f:validateRequired/>
-                            </h:inputTextarea>
-                            <h:message for="deails2" styleClass=""/>
-                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
-                                             id="deails2"
-                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
-                                <f:validateRequired/>
-                            </h:inputTextarea>
-                            <h:message for="deails3" styleClass=""/>
-                            <h:inputTextarea styleClass="uk-textarea"
-                                             id="deails3"
-                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
-                                <f:validateRequired/>
-                            </h:inputTextarea>
-
-                            <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}:</h3>
-                            <h:message for="Conclusion" styleClass=""/>
-                            <h:inputTextarea styleClass="uk-textarea"
-                                             id="Conclusion"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
                                 <f:validateRequired/>
                             </h:inputTextarea>
+                            <h:message for="deails2" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea uk-margin-medium-bottom"
+                                             id="deails2"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="deails3" styleClass=""/>
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="deails3"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}:</h3>
                             <h:message for="Conclusion" styleClass=""/>
-
+                            <h:inputTextarea styleClass="uk-textarea"
+                                             id="Conclusion"
+                                             disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                <f:validateRequired/>
+                            </h:inputTextarea>
+                            <h:message for="Conclusion" styleClass=""/>
                         </div>
-
-
-                </div>
+                    </div>
                     <h:commandButton id="boton-enviar-mapa-mental-escritorio"
                                      value="enviar"
                                      rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                      action="#{mapaMentalControlador.respondeMapaMental}"
                                      styleClass="boton-enviar boton-gral8"/>
                 </h:form>
-
-
-                            <h:commandButton id="boton-enviar-mapa-mental-escritorio"
-                                             value="enviar"
-                                             rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             action="#{mapaMentalControlador.respondeMapaMental}"
-                                             styleClass="boton-enviar"/>
-                        </div>
-                    </h:form>
                 </div>
                 <div class="imagen-who-small uk-hidden@s">
                     <h:graphicImage library="img" name="mounstro/who.svg"/>
@@ -213,7 +198,6 @@
                     </h:form>
                 </div>
             </div>
-        </div>
     </ui:define>
 </ui:composition>
 </html>
