--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -79,7 +79,7 @@
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-14">
                 <div class="titulo-14">
-                    <h3>#{alumno['map14.title.main']}</h3>
+                    <span>#{alumno['map14.title.main']}</span>
                 </div>
                 <div class="arbol uk-position-relative uk-visible@m">
                     <h:form id="formulario--mapamental">
