Revert "Se agrega al etiqueta de respondido"
This reverts commit ea91320a749c68e804ad2b722e8ee3f925e24566.

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -84,7 +84,7 @@
                         <h:graphicImage library="img" name="mounstro/whose.svg"/>
                     </div>
                     <div class="imagen-globo">
-                        <h3 class="titulo-mapa-11 uk-text-capitalize">#{alumno['map10.title.secuence']}</h3>
+                        <h3 class="titulo-mapa-11">#{alumno['map10.title.secuence']}</h3>
                     </div>
                 </div>
                 <div class="uk-hidden@s">
