--- a/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
@@ -83,10 +83,8 @@
                         <span>#{alumno['map2.title.answered']}</span>
                     </h:panelGroup>
                     <div class="dialogo uk-visible@s">
-                        <div class="uk-position-relative">
-                            <h3 class="uk-position-absolute titulo-mapa-3">#{alumno['map3.title.description']}</h3>
-                            <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
-                        </div>
+                        <h3 class=" titulo-mapa-3">#{alumno['map3.title.description']}</h3>
+                        <h:graphicImage library="img" name="/icono/calendario.svg" styleClass="imagen-calendario uk-margin-small-top"/>
                     </div>
                     <div class="imagen-mapa uk-visible@s">
                         <h:graphicImage library="img" name="mounstro/who.svg" />
@@ -95,7 +93,7 @@
                         <div class="dialogo-small">
                             <div class="uk-position-relative">
                                 <h3 class="uk-position-absolute titulo-mapa-3">#{alumno['map3.title.description']}</h3>
-                                <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
+                                <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style=""/>
                             </div>
                         </div>
                         <div class="imagen-mapa-small">
