--- a/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
@@ -150,7 +150,7 @@
                                 <h:message for="factg" styleClass=""/>
                             </div>
                         </div>
-                        <div class="uk-width-3-5@m">
+                        <div class="uk-width-3-5@m opinion">
                             <h3 class="subtitulo-6">Opinion:</h3>
                             <div class="respuestas uk-padding-small">
                                 <h:outputLabel for="opiniona" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"/>
