--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -71,6 +71,7 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="letra.css"/>
+        <h:outputStylesheet library="css" name="alumno/dashboard.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
@@ -120,7 +121,7 @@
                          </div>
                      </div>
                  </h:panelGroup>
-                <h1 class="lescuadron letra-titulo uk-text-center uk-margin-large-top">#{alumno['dashboard.homework.done']}</h1>
+                <h1 class="lescuadron letra-titulo uk-text-center uk-margin-large-top">#{empty alumnoControlador.tareaActvidadModeloLista ? alumno['dashboard.not.homework'] : alumno['dashboard.homework.done']}</h1>
                 <div>
                     <h:form styleClass="formulario-tareas-progreso" >
                         <h:selectOneRadio value="#{tareasProgresoControlador.idTarea}"   >
@@ -130,7 +131,8 @@
                     </h:form>
                     <ul>
                         <li class="uk-margin-medium-left">
-                            <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                            <h:graphicImage styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" library="img" name="vacio.svg" pt:uk-svg=""/>
+                            <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
                                 <div class="imagen-flexible">
                                     <h:graphicImage styleClass="img-alumno-dashboard uk-display-block uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
                                    <div class="contenedor-barra">
@@ -156,7 +158,7 @@
                                     </div>
                                 </div>
                             </h:panelGroup>
-                            <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                            <h:panelGroup id="tareas2" layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
                                 <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
                                     <div class="imagen-flexible">
                                         <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[3].tarea}; pos: right "/>
