--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -90,6 +90,8 @@
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <div  uk-grid="">
+                    <h:graphicImage library="img" name="vacio.svg" styleClass="vacio" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}"/>
+                    <h:outputText value="No hay mapas mentales asinadas" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}"/>
                     <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental" >
                         <div class="uk-width-1-3@m uk-position-relative card-mapa mapa-#{mapaMental.cardinalidad}">
                             <h:link outcome="/alumno/mindmap/#{mapaMental.cardinalidad}.xhtml" styleClass="uk-display-block link-imagen-mapa">
