--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -86,10 +86,18 @@
             <div class="uk-container padding-contenedor">
                 <div uk-filter="target: .js-filter" >
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
-                        <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".complete-sentences" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0" style="display: #{empty tareaOracionesControlador.tareaOracionesModeloLista ? 'none' : 'block'}">
+                            <h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
+                        </li>
+                        <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
+                            <h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
+                        </li>
+                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0">
+                            <h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
+                        </li>
+                        <li uk-filter-control=".complete-sentences" uk-tooltip="Completar Oraciones" class="uk-animation-toggle" tabindex="0">
+                            <h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
+                        </li>
                     </ul>
                     <ul class="js-filter" style="list-style: none; padding-left: 0;">
                         <li class="ordenar">
@@ -190,32 +198,27 @@
                         <li class="complete-sentences">
                             <h1 class="lescuadron uk-text-center letra-titulo">#{alumno['title.comple.all.sentences']}</h1>
                             <h:panelGroup layout="block" styleClass="uk-sortable contedor-oraciones" pt:uk-sortable="group: oracion">
-                                <div class="respuesta-oracion">palabra</div>
-                                <div class="respuesta-oracion">palabra</div>
-                                <div class="respuesta-oracion">palabra</div>
-                                <div class="respuesta-oracion">palabra</div>
+                                <div>palabra</div>
+                                <div>palabra</div>
+                                <div>palabra</div>
+                                <div>palabra</div>
                             </h:panelGroup>
                             <div class="oracion-completar">
                                 <ul class="uk-subnav uk-subnav-pill uk-margin-top " uk-switcher="">
-                                    <li><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
                                 </ul>
                                 <ul class="uk-switcher uk-margin">
                                     <ui:repeat value="#{completarOracionesControlador.tareaCompletarModeloLista}" var="texto">
                                         <li><h:outputText value="#{texto.oracion}" escape="false"/> </li>
                                     </ui:repeat>
-
                                 </ul>
                             </div>
-
                         </li>
-
                     </ul>
-
                 </div>
-
             </div>
         </div>
         <script type="application/javascript">
