--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -11,7 +11,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="hamburguesa">
@@ -89,9 +90,14 @@
         <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
+
+                <h:panelGroup layout="block" styleClass="contiene" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}">
+<!--                    <h:graphicImage library="img" name="/alumno/pop-art/mensaje2.svg" styleClass="no-hay-mapas" pt:uk-svg=""/>-->
+                    <h:outputText styleClass="letras" value="No hay mapas mentales asignadas" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}"/>
+                </h:panelGroup>
+
                 <div  uk-grid="">
-                    <h:graphicImage library="img" name="vacio.svg" styleClass="vacio" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}"/>
-                    <h:outputText value="No hay mapas mentales asinadas" rendered="#{empty seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}"/>
+
                     <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental" >
                         <div class="uk-width-1-3@m uk-position-relative card-mapa mapa-#{mapaMental.cardinalidad}">
                             <h:link outcome="/alumno/mindmap/#{mapaMental.cardinalidad}.xhtml" styleClass="uk-display-block link-imagen-mapa">
